Fix release pipeline for lxd and docker
- build-docker.yml: Increase retries for integration tests to 5
- build-lxd.yml: Fix empty output variables

Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -7,9 +7,9 @@ on:
         type: string
     outputs:
       artifact_name:
-        value: "${{ jobs.build.outputs.artifact_name }}"
+        value: "${{ jobs.build-current.outputs.artifact_name }}"
       artifact_file:
-        value: "${{ jobs.build.outputs.artifact_file }}"
+        value: "${{ jobs.build-current.outputs.artifact_file }}"
   push:
     branches:
       - "**"
