build-{docker,lxd}: Also run on PRs against release branches
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -15,8 +15,9 @@ on:
       - "**"
   pull_request:
     branches:
-      - "master"
-      - "devel"
+      - master
+      - devel
+      - release/*
 
 jobs:
   build-current:
