--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -92,10 +92,12 @@ jobs:
           then
             version="latest"
           else
-            git checkout "${{ github.base_ref }}"
+            ref="${{ github.base_ref }}"
+            [[ -n "$ref" ]] || ref="${{ github.ref }}"
+            git checkout "$ref"
             if [[ "${{ github.ref_type }}" != "tag" ]] || ! git describe --tags > /dev/null
             then
-              git fetch -fu --tags origin ${{ github.base_ref }}:${{ github.base_ref }}
+              git fetch -fu --tags origin "${ref}:${ref}"
             fi
             version="$(git describe --tags || true)"
             [[ "$version" =~ .*-.*-.* ]] || {
@@ -148,6 +150,37 @@ jobs:
       - name: Setup Selenium
         run: pip install selenium
 
+      - name: Wait for container startup
+        run: |
+          set -e
+          docker logs nextcloudpi                                    |& awk "{ print \"${LOG_DCKR} \" \$0 }"
+          echo -e "${LOG_DCKR} =========="
+          docker logs -f nextcloudpi                                 |& awk "{ print \"${LOG_DCKR} \" \$0 }" &
+          
+          attempt=0
+          for attempt in {1..30}
+          do
+            echo -e "${LOG_CICD} Waiting for container startup (attempt $attempt/30)..."
+            redis_pw="$(docker exec nextcloudpi bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"password'")"
+            redis_socket="$(docker exec nextcloudpi bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"host'")"
+            if docker logs nextcloudpi 2> /dev/null | grep '^Init done' > /dev/null \
+              && [[ "$(docker exec nextcloudpi ncc maintenance:mode)" =~ .*disabled.* ]] \
+              && docker exec nextcloudpi ncc status \
+              && docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" set redisready yes \
+              && docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" get redisready
+            then
+              echo -e "${LOG_CICD} Startup successful"
+              break
+            elif [[ "$attempt" -ge 30 ]]
+            then
+              echo -e "${LOG_CICD} Timeout reached."
+              exit 1
+            fi
+
+            attempt=$((attempt + 1))
+            sleep 5
+          done
+
       - name: Activate container
         working-directory: ./tests
         run: |
@@ -161,7 +194,7 @@ jobs:
           success=false
           for attempt in {1..5}
           do
-            echo ":: Activation Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == Activation Tests (attempt $attempt/5) =="
             "${cmd[@]}"                                               |& awk "{ print \"${LOG_TEST} \" \$0 }"
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               tail -n 20 geckodriver.log                              |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
@@ -254,7 +287,7 @@ jobs:
           success=false
           for attempt in {1..5}
           do
-            echo ":: System Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == System Tests (attempt $attempt/5) =="
             python system_tests.py --no-ping --non-interactive |& awk "{ print \"${LOG_TEST} \" \$0 }"
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               echo -e "${LOG_CICD} System test (attempt $attempt) failed!"
@@ -275,7 +308,7 @@ jobs:
           success=false
           for attempt in {1..3}
           do
-            echo ":: Nextcloud Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == Nextcloud Tests (attempt $attempt/5) =="
             python nextcloud_tests.py --no-gui localhost 8443 4443   |& awk "{ print \"${LOG_TEST} \" \$0 }" 
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               tail -n 20 geckodriver.log                             |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
@@ -382,7 +415,7 @@ jobs:
           success=false
           for attempt in {1..5}
           do
-            echo ":: Activation Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == Activation Tests (attempt $attempt/5) =="
             "${cmd[@]}"                                              |& awk "{ print \"${LOG_TEST} \" \$0 }"
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               tail -n 20 geckodriver.log >&2                         |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
@@ -403,7 +436,7 @@ jobs:
           success=false
           for attempt in {1..5}
           do
-            echo ":: System Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == System Tests (attempt $attempt/5) =="
             python system_tests.py --no-ping --non-interactive       |& awk "{ print \"${LOG_TEST} \" \$0 }" 
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               echo -e "${LOG_CICD} System test (attempt $attempt) failed!"
@@ -422,7 +455,7 @@ jobs:
           success=false
           for attempt in {1..5}
           do
-            echo ":: Nextcloud Tests (attempt $attempt/5) ::"
+            echo -e "${LOG_CICD} == Nextcloud Tests (attempt $attempt/5) =="
             python nextcloud_tests.py --no-gui localhost 8443 4443   |& awk "{ print \"${LOG_TEST} \" \$0 }" 
             [[ ${PIPESTATUS[0]} -eq 0 ]] || {
               tail -n 20 geckodriver.log >&2                         |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
