--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -26,6 +26,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: "${{ inputs.git_ref }}"
+      LOG_GUEST: "\\033[1;34mGUEST::\\033[0m"
+      LOG_NCP: "\\033[1;36m~NCP::\\033[0m"
+      LOG_CICD: "\\033[1;35mCICD::\\033[0m"
+      LOG_TEST: "\\033[1;33mTEST::\\033[0m"
+      LOG_DIAG: "\\033[1;31mDIAG::\\033[0m"
     defaults:
       run:
         shell: bash
@@ -75,7 +80,7 @@ jobs:
         id: build-armbian-2nd
         run: |
           set -ex
-          echo "Cleanup armbian build leftovers..."
+          echo -e "${LOG_CICD} Cleanup armbian build leftovers..."
           sudo rm -rf armbian/ tmp/ output/
           
           export LIB_TAG=master
@@ -100,7 +105,7 @@ jobs:
         id: build-rpi
         run: |
           set -ex
-          echo "Protected? ${{ github.ref_protected }}"
+          echo -e "${LOG_CICD} Protected? ${{ github.ref_protected }}"
           export IMG="NextCloudPi_${{ inputs.board_name }}_${VERSION//\//_}.img"
           [[ "${{ github.ref_protected }}" == true ]] || export DBG=x
           wget -q https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-aarch64-static -O ./qemu-aarch64-static
@@ -111,9 +116,9 @@ jobs:
           for i in {1..10}
           do
             sudo losetup | grep "${IMG}" || break;
-            [[ "$i" -lt 10 ]] || { echo "Timeout while waiting for image to unmount"; exit 1; }
+            [[ "$i" -lt 10 ]] || { echo -e "${LOG_CICD} Timeout while waiting for image to unmount"; exit 1; }
             sleep 6
-            echo "Retrying ($i out of 10)"
+            echo -e "${LOG_CICD} Retrying ($i out of 10)"
           done
 
           echo "artifact_file=${IMG}" >> $GITHUB_OUTPUT
@@ -132,6 +137,11 @@ jobs:
       VERSION: "${{ inputs.git_ref }}"
       ARTIFACT_ID: ${{ needs.build.outputs.artifact_name }}
       ARTIFACT_FILE: ${{ needs.build.outputs.artifact_file }}
+      LOG_GUEST: "\\033[1;34mGUEST::\\033[0m"
+      LOG_NCP: "\\033[1;36m~NCP::\\033[0m"
+      LOG_CICD: "\\033[1;35mCICD::\\033[0m"
+      LOG_TEST: "\\033[1;33mTEST::\\033[0m"
+      LOG_DIAG: "\\033[1;31mDIAG::\\033[0m"
     defaults:
       run:
         shell: bash
@@ -176,42 +186,73 @@ jobs:
       - name: Test image
         id: test
         run: |
-          set -ex
+          set -e
           
           trap 'sudo machinectl terminate ncp' EXIT
           
-          sudo systemd-nspawn --boot -D ./raspbian_root/ -M ncp --hostname=nextcloudpi |& awk '{ print "CONTAINER::" $0 }' &
+          sudo systemd-nspawn --boot -D ./raspbian_root/ -M ncp --hostname=nextcloudpi |& awk "{ print \"${LOG_GUEST} \" \$0 }" &
           sleep 60
+          
+          CONTAINER_CMD=(sudo systemd-run --machine=ncp -P --wait)
           
           success=false
           for attempt in {1..30}
           do
-            echo ":: Wait for container to startup (attempt $attempt/30) ::"
-            ip="$(sudo systemd-run --machine=ncp -P --wait bash -c '. /usr/local/etc/library.sh > /dev/null; get_ip')"
+            echo -e "${LOG_CICD} == Wait until container network is available (attempt $attempt/30) =="
+            ip="$("${CONTAINER_CMD[@]}" bash -c '. /usr/local/etc/library.sh > /dev/null; get_ip')"
             [[ -n "$ip" ]] && curl -k "https://$ip/activate" > /dev/null || { sleep 6; continue; }
             success=true
             break
           done
-          sudo systemd-run --machine=ncp -P --wait bash -c 'cat /var/log/ncp.log' |& awk '{ print "NCP::" $0 }'
-          sudo systemd-run --machine=ncp -P --wait bash -c 'tail -n 0 -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
+          cat ./raspbian_root/var/log/ncp.log |& awk "{ print \"${LOG_NCP} \" \$0 }"
+          tail -n 0 -f ./raspbian_root/var/log/ncp.log |& awk "{ print \"${LOG_NCP} \" \$0 }" &
           
           [[ "$success" == "true" ]] || {
-            echo "Could not reach container. Aborting..."
+            echo -e "${LOG_CICD} Could not reach container. Aborting..."
             exit 1
           }
+
+          attempt=0
+          success=false
+          for attempt in {1..100}
+          do
+            echo -e "${LOG_CICD} Waiting for container startup (attempt $attempt/100)..."
+            redis_pw="$("${CONTAINER_CMD[@]}" bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"password'")"
+            redis_socket="$("${CONTAINER_CMD[@]}" bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"host'")"
+            if [[ "$("${CONTAINER_CMD[@]}" ncc maintenance:mode)" =~ .*disabled.* ]] \
+              && "${CONTAINER_CMD[@]}" ncc status \
+              && "${CONTAINER_CMD[@]}" redis-cli -s "$redis_socket" -a "$redis_pw" set redisready yes \
+              && "${CONTAINER_CMD[@]}" redis-cli -s "$redis_socket" -a "$redis_pw" get redisready
+            then
+              echo -e "${LOG_CICD} Startup successful"
+              success=true
+              break
+            fi
+
+            attempt=$((attempt + 1))
+            sleep 5
+          done
+          
+          [[ "$success" == "true" ]] || {
+              echo -e "${LOG_CICD} Timeout reached."
+              exit 1
+          }
+          
+          set -x
           
           success=false
           for attempt in {1..5}
           do
-            echo ":: Activation Tests (attempt $attempt/5) ::"
-            python tests/activation_tests.py -t 300 --no-gui "$ip" 443 4443 || {
-              echo "Activation test failed!"
-              echo "Geckodriver logs:"
-              tail -n 20 geckodriver.log >&2 || true
+            echo -e "${LOG_CICD} == Activation Tests (attempt $attempt/5) =="
+            python tests/activation_tests.py -t 300 --no-gui "$ip" 443 4443 |& awk "{ print \"${LOG_TEST} \" \$0 }"
+            [[ ${PIPESTATUS[0]} -eq 0 ]] || {
+              echo -e "${LOG_CICD} Activation test failed!"
+              echo -e "${LOG_DIAG} Geckodriver logs:"
+              tail -n 20 geckodriver.log >&2 |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo "================"
-              echo "mysql: "
-              sudo systemd-run --wait -P --machine=ncp bash /usr/local/bin/ncp-diag
-              sudo systemd-run --wait -P --machine=ncp systemctl status mysql
+              echo -e "${LOG_DIAG} mysql: "
+              sudo systemd-run --wait -P --machine=ncp bash /usr/local/bin/ncp-diag |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              sudo systemd-run --wait -P --machine=ncp systemctl status mysql |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               sleep 12
               continue
             }
@@ -219,16 +260,17 @@ jobs:
             break
           done
           [[ "$success" == "true" ]] || {
-            echo "Activation test failed in all attempts!"
+            echo -e "${LOG_CICD} Activation test failed in all attempts!"
             exit 1
           }
           
           success=false
           for attempt in {1..5}
           do
-            echo ":: System Tests (attempt $attempt/5) ::"
-            sudo python tests/system_tests.py --non-interactive || {
-              echo "System test failed!"
+            echo -e "${LOG_CICD} == System Tests (attempt $attempt/5) =="
+            sudo python tests/system_tests.py --non-interactive |& awk "{ print \"${LOG_TEST} \" \$0 }"
+            [[ ${PIPESTATUS[0]} -eq 0 ]] || {
+              echo -e "${LOG_CICD} System test failed!"
               sleep 12
               continue
             }
@@ -236,21 +278,22 @@ jobs:
             break
           done
           [[ "$success" == "true" ]] || {
-            echo "System test failed in all attempts!"
+            echo -e "${LOG_CICD} System test failed in all attempts!"
             exit 1
           }
           
           success=false
           for attempt in {1..5}
           do
-            echo ":: Nextcloud Tests (attempt $attempt/5) ::"
-            python tests/nextcloud_tests.py --no-gui "$ip" 443 4443 || {
-              echo "Nextcloud test failed!"
-              echo "Geckodriver logs:"
-              tail -n 20 geckodriver.log >&2 || true
-              echo "================"
-              echo "ncp.log: "
-              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log" || true
+            echo -e "${LOG_CICD} == Nextcloud Tests (attempt $attempt/5) =="
+            python tests/nextcloud_tests.py --no-gui "$ip" 443 4443 |& awk "{ print \"${LOG_TEST} \" \$0 }"
+            [[ ${PIPESTATUS[0]} -eq 0 ]] || {
+              echo -e "${LOG_CICD} Nextcloud test failed!"
+              echo -e "{$LOG_DIAG} Geckodriver logs:"
+              tail -n 20 geckodriver.log >&2 |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
+              echo -e "${LOG_CICD} ================"
+              echo -e "${LOG_DIAG} ncp.log: "
+              sudo systemd-run --wait -P --machine=ncp ncp /bin/bash -c "tail -n20 /var/log/ncp.log" |& awk "{ print \"${LOG_DIAG} \" \$0 }" || true
               sleep 12
               continue
             }
@@ -259,6 +302,6 @@ jobs:
           done
           
           [[ "$success" == "true" ]] || {
-            echo "Nextcloud test failed in all attempts!"
+            echo -e "${LOG_CICD} Nextcloud test failed in all attempts!"
             exit 1
           }
